fix youtube positioning on mobile

--- a/manifest/source/style.less
+++ b/manifest/source/style.less
@@ -20,11 +20,13 @@ h1, h2, h3, h4 {
 	padding-bottom: 56.25%;
 	padding-top: 25px;
 	height: 0;
+	margin-left: 30px;
+	margin-right: 30px;
 }
 .yt-wrapper iframe {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 90%;
-	height: 90%;
+	width: 100%;
+	height: 100%;
 }
